k8s-setup/k8s-basic/k8s-dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx 
  tls: 
    - hosts: 
      - k8s-dashboard.bunpanin.online
      secretName: k8s-dashboard-tls
  rules:
  - host: k8s-dashboard.bunpanin.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 443

# kubectl apply -f dashboard-ingress.yaml
